--- a/src/app/product/[id]/AddToCartButton.scss
+++ b/src/app/product/[id]/AddToCartButton.scss
@@ -55,7 +55,7 @@
       transition: background-color 0.2s;
 
       &:hover {
-        background-color: #0069d9;
+        background-color: var(--primary-hover);
       }
     }
 
@@ -64,7 +64,7 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-      background-color: var(--background-color);
+      background-color: var(--bg-main);
       border: 1px solid var(--border);
       border-radius: 4px;
       overflow: hidden;
