--- a/src/app/product/[id]/page.scss
+++ b/src/app/product/[id]/page.scss
@@ -42,7 +42,7 @@
     h1 {
       font-size: 2.5rem;
       margin-bottom: 1rem;
-      color: var(--primary);
+      color: var(--text-main);
     }
 
     .price {
